[package]
name = "mqo-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Adaptive reference agent that plans which MQO pillars to call for any NL question"
license = "MIT"
authors = ["Joe Yen <jyen.tech@gmail.com>"]

[[bin]]
name = "mqo-agent"
path = "src/main.rs"

[lib]
name = "mqo_agent"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sigpipe = "0.1"

[dev-dependencies]
